# VulkBrownbag

./: .gitignore  CMakePresets.json  CmakeLists.txt  README.md  vcpkg.json
src/samples/00_Triangle/: 00_triangle.cpp  CMakeLists.txt  passthru.frag  passthru.vert
src/samples/01_ModelViewProj/: 01_ModelViewProj.cpp  CMakeLists.txt  passthru.vert
src/samples/02_RenderPasses/: CMakeLists.txt  RenderPasses.cpp  utils.cpp  utils.hpp  utils_raii.hpp
src/vulk/: CMakeLists.txt  Vulk.cpp  Vulk.h  VulkBuffer.h  VulkDescriptorSet.h  VulkDescriptorSetBuilder.h  VulkDescriptorSetLayout.h  VulkDescriptorSetLayoutBuilder.cpp  VulkDescriptorSetLayoutBuilder.h  VulkDescriptorSetUpdater.cpp  VulkException.h  VulkFence.h  VulkFrameBuffer.h  VulkImageView.h  VulkMesh.cpp  VulkMesh.h  VulkPipelineBuilder.cpp  VulkPipelineBuilder.h  VulkShaderModule.h  VulkStorageBuffer.h  VulkUniformBuffer.h  VulkUtil.cpp  VulkUtil.h
